<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="50dp"
    android:paddingTop="30dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmação"
        android:id="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:id="@+id/textView6"
        android:layout_below="@id/header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modalidade"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodo"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNome"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtIdades"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginLeft="10dp"

        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtModalidade"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginLeft="10dp"

        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPeriodo"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginLeft="10dp"

        android:layout_toEndOf="@+id/textView9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:id="@+id/btnConfirmar"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>


</RelativeLayout>